# py_advanced

./: .coveragerc  README.md  pyproject.toml  pytest.ini  requirements.txt
data/: bdd_cours_python_avance  consommation_brute_quaotidienne_gaz_elec.json
src/: config.json  configuration.py  main.py
src/bdd/: db.py
src/sql/: consommation_brute_quotidienne_gaz_elec.sql  prix_instantane_carburant.sql  test_sql.sql
src/utils/: custom_logging.py  lecteur_configuration.py  stocker_fichier.py
tests/: .coverage  conftest.py  test_configuration.py  test_db.py  test_lecteur_configuration.py  test_stocker_fichier.py
tests/fixtures/: data_gouv.json  data_type_inconnu.json  donnees_tests.json  economie_gouv.json
