[tool.poetry]
name = "cours_python_avance"
version = "0.1.0"
description = "Pipeline de data pour le cours python avancé de Ada"
authors = ["La Team Ada <contact@ada-study.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.32.3"
duckdb = "1.2.1"
pydantic = "2.10.6"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
pytest-cov = "6.0.0"
coverage = "7.7.0"
